[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podscript"
version = "0.1.0"
description = "CLI tool to transcribe podcasts and YouTube videos using ElevenLabs Scribe API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
podscript = "podscript:main"
