[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podscript"
version = "0.2.0"
description = "CLI tool to transcribe podcasts and YouTube videos into clean markdown with speaker diarization and timestamps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tim Farrelly", email = "timf34@github.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "requests>=2.31",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
local = [
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1",
    "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/timf34/podscript"
Repository = "https://github.com/timf34/podscript"
Issues = "https://github.com/timf34/podscript/issues"

[project.scripts]
podscript = "podscript:main"
